<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.riyahi.tanoori.SplActivity"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/wallbig_spl_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/wall">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120pt"
        android:layout_marginStart="-176pt"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="150pt"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/Phone_enter"
            android:inputType="phone"
            android:labelFor="@+id/editText2"
            android:textAlignment="center"
            android:textDirection="anyRtl"
            android:shadowDx="7.0"
            android:shadowDy="7.0"
            android:shadowColor="#767676"

            android:shadowRadius="10.0"

            />

        <Button
            android:layout_marginTop="7pt"
            android:id="@+id/reg_tell_btn"
            android:layout_width="70pt"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:text="@string/Reg_btn" />

    </LinearLayout>


</LinearLayout>
